# aptos-ansible

./: .gitignore  README.md  ansible.cfg  pyproject.toml
playbooks/: build_binary.yaml  firewall.yaml  fullnode_from_source.yaml  setup.yaml  source_deps.yaml  start_unit.yaml
roles/basic_setup/tasks/: main.yaml
roles/build_binary/defaults/: main.yaml
roles/build_binary/meta/: main.yaml
roles/build_binary/tasks/: main.yaml
roles/create_node_config/defaults/main/: networking.yaml  paths.yaml
roles/create_node_config/meta/: main.yaml
roles/create_node_config/tasks/: main.yaml
roles/create_node_config/templates/: config.yaml.j2
roles/install_source_dependencies/defaults/: main.yaml
roles/install_source_dependencies/meta/: main.yaml
roles/install_source_dependencies/tasks/: install_package_manager_deps.yaml  install_rust.yaml  main.yaml
roles/setup_firewall/defaults/main/: networking.yaml
roles/setup_firewall/meta/: main.yaml
roles/setup_firewall/tasks/: main.yaml
roles/setup_https/meta/: main.yaml
roles/setup_https/tasks/: main.yaml
roles/start_unit/defaults/main/: README.md  build_binary.yaml  build_config.yaml  main.yaml  paths.yaml  unit.yaml
roles/start_unit/meta/: main.yaml
roles/start_unit/tasks/: main.yaml
roles/start_unit/templates/: aptos-node.service.j2
