[tool.poetry]
name = "aptos-ansible"
version = "0.1.0"
description = "Aptos Ansible"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
ansible = "^6.6.0"

[tool.poetry.dev-dependencies]
autoflake = "1.4.0"
black = "^22.6.0"
flake8 = ">=3.8.3,<6.0.0"
isort = "^5.10.1"
ansible-lint = "^6.8.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
